syntax = "proto3";

import "google/protobuf/empty.proto";

package smartchef;

option java_multiple_files = true;
option java_package = "com.mateuszmatuszczyk.smartchef";
option java_outer_classname = "SmartCookerProto";

// The SmartCooker service definition.
service SmartCooker {
    rpc switchOn(google.protobuf.Empty) returns (CookerStatus) {}
    rpc switchOff(google.protobuf.Empty) returns (CookerStatus) {}
    rpc cookerStatus(google.protobuf.Empty) returns (CookerStatus) {}
    rpc startHeating(google.protobuf.Empty) returns (stream CookerStatus) {}
    rpc stopHeating(google.protobuf.Empty) returns (stream CookerStatus) {}
}

message CookerStatus{
  //OFF - false 
  //ON - true
  bool statusOnOff= 1;
  string statusMsg = 2;
  int32 temperature = 3;
}